test/fail_compilation/jsonBadQuery1.d
/*
PERMUTE_ARGS:
REQUIRED_ARGS: -Xq=UNKNOWN_FIELD_NAME
TEST_OUTPUT:
---
Error: invalid JSON query at offset 0: unknown field name `UNKNOWN_FIELD_NAME`, expected one of compilerInfo, buildInfo, modules, semantics
---
*/
